[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/GUI.gd" type="Script" id=2]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddProj" type="Button" parent="."]
margin_left = 392.0
margin_top = 511.0
margin_right = 468.0
margin_bottom = 581.0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 508.0
margin_top = 510.0
margin_right = 584.0
margin_bottom = 580.0
icon = ExtResource( 1 )

[node name="Load" type="Button" parent="."]
margin_left = 601.0
margin_top = 509.0
margin_right = 677.0
margin_bottom = 579.0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projects" type="GridContainer" parent="."]
margin_right = 300.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 513, 299 )
current = true

[connection signal="pressed" from="AddProj" to="." method="_on_AddProj_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
